# MiPro-XG-V1

./: .gitattributes  .gitignore  LICENSE.md  README.md
docs/: GPRs.drawio  GettingStarted.md  HardwareArchitecure.md  InstructionSetArchitecture.md  InterruptHandling.md
docs/Presantations/: Untitled Diagram.drawio
docs/Presentations/: Poster Queerformat.pptx
docs/imgs/: Untitled Diagram.drawio
src/Hardware/: top.vhd
src/Hardware/MiPro-XG-V1/: ALU_tb_behav.wcfg  MiPro-XG-V1.xpr
src/Hardware/Processor/: ALU.vhd  CPU_Core.vhd  IO_SevenSegmentDisplays.vhd  RAM.vhd  clockController.vhd  controlUnit.vhd  coreInterruptController.vhd  memoryMapping.vhd  registerFile.vhd  top.vhd
src/Hardware/QuartusProject/: MiPro-V1.qpf  MiPro-V1.qsf  MiPro-V1.qws  MiPro-V1_assignment_defaults.qdf
src/Hardware/VHDL Playground and Tests/: GeneralPurposeRegisters.vhd
src/Hardware/VHDL Source Files/: ALU.vhd  BRAM_Intel.vhd  CPU_Core.vhd  CPU_Core.vhd.bak  IO_PinDigital.vhd  IO_SevenSegmentDisplays.vhd  IO_SevenSegmentDisplays.vhd.bak  RAM.vhd  RAM.vhd.bak  SDRAM_Controller_DE10_Lite.vhd  addressDecoder.vhd  clockGeneratorAMD.vhd  controlUnit.vhd  controlUnit.vhd.bak  coreInterruptController.vhd  hardwareTimer.vhd  helperPackage.vhd  memoryMapping.vhd  pllClockGeneratorIntel.vhd.bak  pllClockGeneratorWrapper.vhd  top.vhd  (+2 more)
src/Software/VisualDebugger/: CMakeLists.txt  README.md  main.py  processor.py
src/Software/VisualDebugger/graphics/: UI.py  colors.py  settings.py  utils.py
src/Software/VisualDebugger/libs/imgui/: CMakeLists.txt
src/Software/VisualDebugger/src/: main.cpp
(+1633 files in other folders)
